added basic poop_remover item

--- a/src/main/resources/assets/hyper_florecent/lang/en_us.json
+++ b/src/main/resources/assets/hyper_florecent/lang/en_us.json
@@ -2,6 +2,7 @@
     "itemGroup.hyper_florecent": "Hyper Florecent",
 
     "item.hyper_florecent.florecillium": "Florecillium",
+    "item.hyper_florecent.poop_remover": "POOP EXPLODIFICATOR",
 
     "block.hyper_florecent.florecillium_block": "Block of Florecillium"
 }
